--- a/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block dashboard %}
 
-<title>Validation | PPMS </title>
+<title>Accounts | PPMS </title>
 </head>
 <body>
 
@@ -23,7 +23,7 @@
                 <div class="menu" id="navLinks">
                     <ul id="nav" class="nav text-small">
                         <li>
-                            <a href="{% url 'admin_home' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"  
+                            <a href="{% url 'admin_home' %}" class="nav-link"data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"  
                             title="Admin Home">
                             <i id="navIcon" class="fa fa-fw fa-home" style="font-size: 24px;"></i>   
                             <span id="navText" style="font-size: 20px;"><i class="fa fa-fw fa-home" style="font-size: 20px;margin-right:8px;"></i>Home</span>
@@ -45,34 +45,34 @@
                         </li>
                         <li>
                             {% if invalidated_count > 0 %}
-                            <a href="{% url 'bhw_validation' %}" style="color:rgb(27, 177, 92) !important;" class="nav-link"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'bhw_validation' %}" class="nav-link"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                                 title="BHW Validation" >
                                 <i id="navIcon" class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>
-                                <span id="navText" style="font-size: 20px; color:rgb(27, 177, 92) !important;" ><i class="fa fa-fw fa-user-md" style="font-size: 20px;margin-right:8px;"></i>BHW Validation</span>
+                                <span id="navText" style="font-size: 20px; " ><i class="fa fa-fw fa-user-md" style="font-size: 20px;margin-right:8px;"></i>BHW Validation</span>
                                 <span class="position-absolute top-25 start-75 translate-middle badge rounded-pill bg-danger">
                                     !
                                     <span class="visually-hidden">BHW Validation</span>
                                 </span></a>
                             {% else %}
-                            <a href="{% url 'bhw_validation' %}" style="color:rgb(27, 177, 92) !important;" class="nav-link"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'bhw_validation' %}" class="nav-link"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                                 title="BHW Validation" >
                                 <i id="navIcon" class="fa fa-fw fa-user-md" style="font-size: 24px;"></i>  
-                                <span id="navText"style="font-size: 20px; color:rgb(27, 177, 92) !important;" ><i class="fa fa-fw fa-user-md" style="font-size: 20px;margin-right:8px;"></i>BHW Validation</span>
+                                <span id="navText"style="font-size: 20px; " ><i class="fa fa-fw fa-user-md" style="font-size: 20px;margin-right:8px;"></i>BHW Validation</span>
                                 </a>
                             {% endif %}
                         </li>
                         <li>
-                            <a href="{% url 'admin_userAccounts' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'admin_userAccounts' %}"  class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="User Accounts">
                             <i id="navIcon" class="fa fa-3x fa-fw fas fa-users " style="font-size: 24px;"></i>
-                            <span id="navText" style="font-size: 20px;" ><i class="fa fa-fw fa-users" style="font-size: 20px;margin-right:8px;"></i>User Accounts</span>
+                            <span id="navText" style="font-size: 20px; "><i class="fa fa-fw fa-users" style="font-size: 20px;margin-right:8px;"></i>User Accounts</span>
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'admin_historyLogs' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'admin_historyLogs' %}" style="color:rgb(27, 177, 92) !important;" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="History Logs">
                             <i id="navIcon" class="fa fa-3x fa-fw fas fa-clipboard-list " style="font-size: 24px;"></i>
-                            <span id="navText" style="font-size: 20px;" ><i class="fa fa-fw fa-clipboard-list" style="font-size: 20px;margin-right:8px;"></i>History Logs</span>
+                            <span id="navText" style="font-size: 20px; color:rgb(27, 177, 92) !important;" ><i class="fa fa-fw fa-clipboard-list" style="font-size: 20px;margin-right:8px;"></i>History Logs</span>
                             </a>
                         </li>
                         <li>
@@ -124,24 +124,68 @@
         <div class="">
             <div class="row"> 
                 <div class="col">
-                    <h3 style="text-align:left;">Validation</h3>
+                    <h3 style="text-align:left;">History Logs</h3>
                 </div>
             </div>
         <hr>
         <br>
         </div>
     </div>
-    <!--------------------- DataTables --------------------->
+    <!--------------------- DataTables for BHW --------------------->
     <div class="text-black">
         <div class="row">
             <div class="col">
                 <div class="card-header">
-                    <h3> Barangay Health Workers</h3>
+                    <h3> System Logs</h3>
 
                 </div>
                 <div class="card shadow-lg p-3 bg-white rounded" >
                     <div class="table-responsive" >
-                        <table class="table table-hover table-cell-border" id="table_validation" >
+                        <table class="table table-hover table-cell-border" id="systemLogs_table" >
+                            <thead>
+                                <tr>
+                                    <th scope="col" class="text-center">No.</th>
+                                    <th scope="col" class="text-center">Log Action</th>
+                                    <th scope="col" class="text-center">Email</th>
+                                    <th scope="col" class="text-center">Barangay Designation</th>
+                                    <th scope="col" class="text-center">DateTime</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for logs in systemLogs %}
+                                <tr>
+                                    <td class="text-center"></td>
+                                    {% if logs.log_action == "logged in" or logs.log_action == "Logged IN" %}
+                                        <td class="text-center text-uppercase text-success fw-bold">{{ logs.log_action }}</td>
+                                    {% else %}
+                                        <td class="text-center text-uppercase text-danger fw-bold">{{ logs.log_action }}</td>
+                                    {% endif %}
+                                    <td class="text-center">{{ logs.logged_userid }}</td>
+                                    <td class="text-center">{{ user.phone_num}}</td>
+                                    <td class="text-center">{{ logs.datetime_log }}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <hr>
+
+    <!--------------------- DataTables for Parents --------------------->
+    <div class="text-black pt-3">
+        <div class="row">
+            <div class="col">
+                <div class="card-header">
+                    <h3>Validation Logs</h3>
+
+                </div>
+                <div class="card shadow-lg p-3 bg-white rounded" >
+                    <div class="table-responsive" >
+                        <table class="table table-hover table-cell-border" id="parentUser_table" >
                             <thead>
                                 <tr>
                                     <th scope="col" class="text-center">No.</th>
@@ -156,46 +200,20 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for bhw in bhws %}
+                                {% for parent in parents %}
                                 <tr>
                                     <td class="text-center"></td>
-                                    <td class="text-center">{{ bhw.user.last_name }}</td>
-                                    <td class="text-center">{{ bhw.user.first_name }}</td>
-                                    <td class="text-center">{{ bhw.user.middle_name }}</td>
-                                    <td class="text-center">{{ bhw.user.suffix_name }}</td>
-                                    <td class="text-center">{{ bhw.user.phone_num}}</td>
-                                    <td class="text-center">{{ bhw.user.email }}</td>
-                                    <td class="text-center">{{ bhw.bhw_barangay }}</td>
+                                    <td class="text-center">{{ parent.user.last_name }}</td>
+                                    <td class="text-center">{{ parent.user.first_name }}</td>
+                                    <td class="text-center">{{ parent.user.middle_name }}</td>
+                                    <td class="text-center">{{ parent.user.suffix_name }}</td>
+                                    <td class="text-center">{{ parent.user.phone_num }}</td>
+                                    <td class="text-center">{{ parent.user.email }}</td>
+                                    <td class="text-center">{{ parent.barangay }}</td>
                                     <td style="text-align: center;">
-                                        <div>
-                                            <button type="button" style="background-color: #188045; color: #ffffff;" class="btn" title="Validate" onclick="toggleValidateModal('Are you sure you want to validate {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')"><i class="fa fa-lg fa-fw fa-user-check"></i></button>
-                                            <button type="button" style="color: rgb(255, 0, 0);" class="btn" onclick="toggleDeleteModal('Are you sure you want to delete {{ bhw.user.first_name }} {{ bhw.user.last_name }}?')" title="Delete"><i class="fa fa-lg fa-fw fa-trash-alt"></i></button>
+                                        <div class="text-center">
+                                            <a href="{% url 'set_pass' parent.user.id %}"><button type="button" style="background-color: #188045; color: #ffffff;" class="btn" title="Reset password"><i class="fa fa-lg fa-fw fa-key"></i></button></a>
                                         </div>
-                                        <script>
-                                            function toggleValidateModal(message) {
-                                                $('#message').text(message);
-                                                $('#form').attr('action', "{% url 'unvalidated_profile' bhw.user.id %}");
-                                                var myModal = new bootstrap.Modal(document.getElementById('validate'), {
-                                                    keyboard: false
-                                                });
-                                                myModal.toggle();
-                                            }
-                                            function toggleDeleteModal(message) {
-                                                $('#message').text(message);
-                                                $('#form').attr('action', "{% url 'delete_profile' bhw.user.id %}");
-                                                var myModal = new bootstrap.Modal(document.getElementById('validate'), {
-                                                    keyboard: false
-                                                });
-                                                myModal.toggle();
-                                            }
-                                            function cancelValidationModal() {
-                                                $('#bhwName').text('');
-                                                $('#form').attr('action', 'validation');
-                                                var myModalEl = document.getElementById('validate');
-                                                var modal = bootstrap.Modal.getInstance(myModalEl);
-                                                modal.hide();
-                                            }
-                                        </script>
                                     </td>
                                 </tr>
                                 {% endfor %}
@@ -206,73 +224,39 @@
             </div>
         </div>
     </div>
-
-   
-    <div class="modal fade" id="validate" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-                <div class="modal-header" >
-                    <h5 class="modal-title fas fa-question-circle d-flex justify-content-center" id="exampleModalLabel"> Confirmation</h5>
-                </div>
-                <div class="modal-body mx-4">
-                    <form action="validation" id="form" method="POST">
-                        {% csrf_token %}
-                        <div class="md-form">
-                            <h5 class="modal-body" style="text-align:center;" id="message"></h5><br>
-                        </div>
-                        <div class="modal-footer" style="justify-content:center">
-                            <div class="d-flex justify-content-center gap-2">
-                                <button type="button" onclick="cancelValidationModal()" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button>
-                                <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Confirm" style="background-color: rgb(44, 95, 34);">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="resetpass" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <form action="resetpass" id="form" method="POST"></form>
-                <div class="modal-content">
-                    <div class="modal-header d-flex align-items-center justify-content-center" >
-                        <h5 class=" p-0" id="resetmsg"></h5>
-                    </div>
-                    <div class="modal-body mx-4">
-                        {% csrf_token %}
-                        <div class="md-form">
-                            
-                            <div class="md-form">
-                                <label id="user-lbl" data-error="wrong" data-success="right">New Password: </label>
-                                {{ form.new_password1 }}
-                            </div>
-                            <div class="md-form">
-                                <label id="user-lbl" data-error="wrong" data-success="right">Confirm New Password: </label>
-                                {{ form.new_password2 }}
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer" style="justify-content:end">
-                        <div class="d-flex justify-content-center">
-                            <button type="submit" onclick="cancelreset()" style="background-color: #EF3A25; color: white;" class="btn">Cancel</button>
-                            <input class="btn btn-primary px-3" type="submit" name="Confirm" value="Save Password" style="margin-left: 2%; background-color: rgb(44, 95, 34);">
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
         <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
             
         <script>
-            var t = $('#table_validation').DataTable({
+            var t2 = $('#systemLogs_table').DataTable({
                 info: 'true',
+                dom: 'rftip',
+                pageLength : 10,   
                 aoColumnDefs: [{
                     'bSortable': false,
                     'aTargets': ['nosort'],
                     'orderable': false,
-                    'targets': [0,8,],
+                    'targets': [0],
+                }],
+                order: [[1, 'asc']],
+                });
+                t2.on('order.dt search.dt', function () {
+                let i = 1;
+                t2.cells(null, 0, { search: 'applied', order: 'applied' }).every(function (cell) {
+                    this.data(i++);
+                });}).draw();
+        </script>
+
+        <script>
+            var t = $('#parentUser_table').DataTable({
+                info: 'true',
+                dom: 'rftip',
+                pageLength : 10,   
+                aoColumnDefs: [{
+                    'bSortable': false,
+                    'aTargets': ['nosort'],
+                    'orderable': false,
+                    'targets': [0,8],
                 }],
                 order: [[1, 'asc']],
                 });
