--- a/ppms_project/profilingApp/templates/activities/Admin - User accounts.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - User accounts.html
@@ -69,6 +69,13 @@
                             </a>
                         </li>
                         <li>
+                            <a href="{% url 'admin_historyLogs' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            title="History Logs">
+                            <i id="navIcon" class="fa fa-3x fa-fw fas fa-clipboard-list " style="font-size: 24px;"></i>
+                            <span id="navText" style="font-size: 20px;" ><i class="fa fa-fw fa-clipboard-list" style="font-size: 20px;margin-right:8px;"></i>History Logs</span>
+                            </a>
+                        </li>
+                        <li>
                             <a id="navIcon" class="btn nav-link position-relative" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="User Settings" aria-expanded="false">
                                 <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
