--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -121,69 +121,58 @@
                 <hr>
             </div>
         </div>
-        <div class="row d-flex align-items-stretch">
-            <div class="col-lg mb-3">
-                <div class="card shadow-sm bg-white rounded h-100">
-                        <div class="card-header">
-                            <h5 class="card-title">Severely Wasted</h5>
+        <div class="mb-4">
+            <div class="card-header">
+                <h4>Preschooler's Nutrition Summary Chart</h4>
+            </div>
+            <div class="card shadow-sm bg-white rounded">
+                <div class="row d-flex align-items-stretch" style="padding:25px 60px 0px 60px;">
+                    <div class="col-lg my-2">
+                        <div class="shadow-md bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(238, 29, 35) !important; border-radius: 50px;">
+                            <div class="d-block textShadow text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0 ">{{ severly }}</p>
+                                <h6 class="fw-bold">Severely Wasted</h6>
+                            </div>
                         </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ severly }}</p>
+                    </div>
+                    <div class="col-lg my-2">
+                        <div class="shadow-md bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(255, 241, 2) !important; border-radius: 50px;">
+                            <div class="d-block textShadow text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ wasted }}</p>
+                                <h6 class="fw-bold">Moderately Wasted</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg my-2">
+                        <div class="shadow-md bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(0, 165, 79) !important; border-radius: 50px;">
+                            <div class="d-block textShadow text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ normal }}</p>
+                                <h6 class="fw-bold">Normal</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg my-2">
+                        <div class="shadow-md bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(242, 98, 33) !important; border-radius: 50px;">
+                            <div class="d-block textShadow text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ overweight }}</p>
+                                <h6 class="fw-bold">Overweight</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg my-2">
+                        <div class="shadow-md bg-white h-100 fw-bold justify-content-center d-flex align-items-center text-center" style="background-color:rgb(242, 98, 33) !important; border-radius: 50px;">
+                            <div class="d-block textShadow text-white p-3">
+                                <p style="font-size: xx-large;" class="card-text m-0">{{ obese }}</p>
+                                <h6 class="fw-bold">Obese</h6>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg mb-3">
-                    <div class="card shadow-sm bg-white rounded h-100">
-                        <div class="card-header">
-                            <h5 class="card-title">Moderately Wasted</h5>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ wasted }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg mb-3">
-                    <div class="card shadow-sm bg-white rounded h-100 ">
-                        <div class="card-header">
-                            <h5 class="card-title">Normal</h5>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ normal }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg mb-3">
-                    <div class="card shadow-sm bg-white rounded h-100 ">
-                            <div class="card-header">
-                            <h5 class="card-title">Overweight</h5>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ overweight }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg mb-3">
-                    <div class="card shadow-sm bg-white rounded h-100">
-                        <div class="card-header">
-                            <h5 class="card-title">Obese</h5>
-                        </div>
-                        <div class="card-body text-center">
-                            <p style="font-size: xx-large;" class="card-text">{{ obese }}</p>
-                        </div>
-                    </div>
-                </div>
-        </div>
-            <div>
-                <div class="card shadow-sm bg-white rounded">
-                    <div class="card-header">
-                        <h5>Summary Chart</h5>
-                    </div>
-
-                    <div class="card-body p-3">
-                        <canvas id="myBar" width="100%" height="50"></canvas>
-                    </div>
+                <div class="card-body p-4">
+                    <canvas id="myBar" width="100%" height="50"></canvas>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
